--- a/app/assets/scss/sobhan.scss
+++ b/app/assets/scss/sobhan.scss
@@ -20,8 +20,8 @@
 }
 
 .notice-wrapper {
-  background-color: $colorWhite;
-  padding: 15px;
+  // background-color: $colorWhite;
+  padding: 0px 15px;
   border: 1px solid $grayColor;
 
   p {
