--- a/app/assets/scss/_event_calendar.scss
+++ b/app/assets/scss/_event_calendar.scss
@@ -21,7 +21,7 @@
             border: none;
             text-align: left;
             font-size: 16px;
-            font-weight: 500;
+            font-weight: $fontWeightSecondary;
             color: #ffffff;
         
             .rbc-header{
@@ -40,7 +40,7 @@
             // border: none;
             text-align: left;
             font-size: 16px;
-            font-weight: 500;
+            font-weight: $fontWeightSecondary;
             color: #ffffff;
         
             .rbc-header{
