--- a/app/assets/scss/seatInfo.scss
+++ b/app/assets/scss/seatInfo.scss
@@ -58,7 +58,7 @@
                 }
             }
             .group-name {
-                font-weight: 500;
+                font-weight: $fontWeightSecondary;
                 margin-bottom: 0;
                 font-size: 16px;
                 .group-title {
