--- a/app/assets/scss/header.scss
+++ b/app/assets/scss/header.scss
@@ -13,7 +13,7 @@
     .inst-title-wrapper{
         margin-top: 15px;
         .ins-title{
-            font-size: 26px;
+            font-size: $fontSizePrimary;
             font-weight: 600;
             color: $colorWhite;
         }
@@ -86,7 +86,8 @@
                 font-size: $fontSizeSecondarySmall;
                 line-height: 1.8;
                 display: block;
-                font-weight: $fontWeightSecondary;
+                font-weight: 300;
+                letter-spacing: .8px;
             }
         }
     }
