--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -412,16 +412,17 @@
                 width: 100%;
                 padding: 10px 15px;
                 .event-name {
-                    font-size: 16px;
-                    font-weight: 700;
+                    font-size: $fontSizeSecondary;
+                    font-weight: $fontWeightPrimary;
                     margin-right: 5px;
                     color: $orangeColor;
                 }
                 .event-date{
-                    font-size: 16px;
-                    color: $darkTextColor;
+                    font-size: $fontSizeSecondarySmall;
+                    color: $grayColor;
                     font-family: 'Montserrat', sans-serif;
-                    font-weight: 600;
+                    font-weight: $fontWeightSecondary;
+
                     i{
                         margin: 0 5px;
                     }
@@ -431,7 +432,7 @@
                     h2{
                         color: $darkTextColor;
                         margin-bottom: 0;
-                        font-weight: 700;
+                        font-weight: $fontWeightSecondary;
                         font-size: 16px;
                     }
                 }
@@ -497,9 +498,18 @@
 .login-form-wrapper{
     cursor: pointer;
     transition: all .5s;
+    
+    .login-image{
+        text-align: center;
+
+        img{
+            width: 75% !important;
+        }
+    }
 
     &:hover {
         background-color: #00000015;
+        box-shadow: 2px -2px 7px #00000040;
     }
 
     &:hover .login-btn > button {
@@ -724,22 +734,23 @@
         margin: 100px 0px;
     }
 }
+
 .sidebar-menu-wrapper{
     background: $primaryColorDark;
     padding: 100px  25px 60px;
-}
-.sidebar-menu-wrapper{
+    height: 100%;
+
     .sidebar-title{
         h3{
-            font-size: 30px;
+            font-size: $fontSizePrimary;
+            font-weight: $fontWeightPrimary;
             color: $colorWhite;
-            font-weight: 700;
             position: relative;
             &::after{
                 content: "\f105";
                 color: $orangeColor;
-                font-size: 30px;
-                font-weight: 300;
+                font-size: $fontSizePrimary;
+                font-weight: $fontWeightPrimary;
                 position: absolute;
                 left: 220px;
                 top: 2px;
@@ -762,7 +773,7 @@
             cursor: pointer;
             line-height: 2.4;
             font-size: $fontSizeSecondary;
-            font-weight: $fontWeightSecondary;
+            font-weight: $fontWeightPrimary;
             padding-left: 25px;
             padding-right: 25px;
             i{
@@ -848,7 +859,8 @@
                 td{
                     border-right: none;
                     padding-bottom: 0px;
-                    font-size: 16px;
+                    font-size: $fontSizeSecondarySmall;
+                    font-weight: $fontWeightSecondary;
                     color: $colorBlack;
                     line-height: 1.8;
                     a{
@@ -856,9 +868,9 @@
                     }
                 }
                 .title{
-                    font-size: 16px;
+                    font-size: $fontSizeSecondary;
                     font-family: 'Montserrat', sans-serif;
-                    font-weight: 700;
+                    font-weight: $fontWeightSecondary;
                     color: $orangeColor;
                     span{
                         font-weight: normal;
@@ -980,8 +992,8 @@
 .page-inner-title{
     margin-bottom: 60px;
     h2{
-        font-size: 32px;
-        font-weight: 600;
+        font-size: $fontSizePrimary;
+        font-weight: $fontWeightPrimary;
         font-family: 'Montserrat', sans-serif;
         color: $colorBlack;
     }
@@ -1122,14 +1134,15 @@
         margin-top: 35px;
         .grid-title{
             h3{
-                font-size: 24px;
+                font-size: $fontSizePrimary;
+                font-weight: $fontWeightPrimary;
                 color: $orangeColor;
-                font-weight: 600;
             }
         }
         .grid-subtitle-title{
             h4{
-                font-size: 16px;
+                font-size: $fontSizeSecondary;
+                font-weight: $fontWeightSecondary;
                 color: $colorBlack;
             }
         }
@@ -1168,11 +1181,12 @@
                         // content: attr(phone);
                         position: absolute;
                         top: 50px;
-                        left: -45px;
+                        left: 0;
                         background: $orangeColor;
                         padding: 5px 10px;
                         border-radius: 5px;
                         opacity: 0;
+                        min-width: 60px;
                     }
                 }
                 a:hover{
@@ -1206,8 +1220,8 @@
                 th{
                     border: none;
                     color: $colorBlack;
-                    font-size: 20px;
-                    font-weight: 700;
+                    font-size: $fontSizeSecondary;
+                    font-weight: $fontWeightPrimary;
                 }
                 border-bottom: 5px solid #fff;
             }
@@ -1224,7 +1238,8 @@
                 td{
                     border-top: none;
                     color: $colorBlack;
-                    font-size: 16px;
+                    font-size: $fontSizeSecondarySmall;
+                    font-weight: $fontWeightSecondary;
                 }
             }
         }
@@ -1309,15 +1324,19 @@
         padding: 50px;
         background-color: $grayColorLight;
         .page-inner-title{
+            margin-bottom: 30px;
+
             h2{
-                font-size: 24px;
+                font-size: $fontSizePrimary;
+                font-weight: $fontWeightPrimary;
                 color: $orangeColor;
             }
-            margin-bottom: 30px;
+            
         }
         .content{
             p{
-                font-size: 16px;
+                font-size: $fontSizeSecondarySmall;
+                font-weight: $fontWeightSecondary;
                 line-height: 1.8;
             }
         }
@@ -1342,7 +1361,7 @@
     .attendance-body-header-inside{
         margin:10;
     }
-    @media screen and (min-width:767px){
+    @media screen and (min-width:992px){
         .attendance-body-header-inside{
             margin:0;
         }
@@ -1350,14 +1369,23 @@
             margin-top: 0px;
         }
         &::after{
+            // width: 199px;
+            // background: $grayColorLight;
+            // content: "";
+            // position: absolute;
+            // left: -100px;
+            // top: -61px;
+            // z-index: -1;
+            // height: 421px;
+            // border-radius: 25px;
             width: 199px;
-            background: $grayColorLight;
+            background: #f2f2f2;
             content: "";
             position: absolute;
             left: -100px;
-            top: -61px;
+            top: -38px;
             z-index: -1;
-            height: 421px;
+            height: 375px;
             border-radius: 25px;
         }
     }
