--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -602,14 +602,14 @@
       padding: 10px 15px; }
       .event-list-wrapper .event-list .event .event-details .event-name {
         font-size: 16px;
-        font-weight: 700;
+        font-weight: 600;
         margin-right: 5px;
         color: #ff4e31; }
       .event-list-wrapper .event-list .event .event-details .event-date {
-        font-size: 16px;
-        color: #454545;
+        font-size: 14px;
+        color: #b2bec8;
         font-family: 'Montserrat', sans-serif;
-        font-weight: 600; }
+        font-weight: 500; }
         .event-list-wrapper .event-list .event .event-details .event-date i {
           margin: 0 5px; }
       .event-list-wrapper .event-list .event .event-details .event-title {
@@ -617,7 +617,7 @@
         .event-list-wrapper .event-list .event .event-details .event-title h2 {
           color: #454545;
           margin-bottom: 0;
-          font-weight: 700;
+          font-weight: 500;
           font-size: 16px; }
       .event-list-wrapper .event-list .event .event-details .event-content p {
         color: #454545;
@@ -647,8 +647,13 @@
 .login-form-wrapper {
   cursor: pointer;
   transition: all .5s; }
+  .login-form-wrapper .login-image {
+    text-align: center; }
+    .login-form-wrapper .login-image img {
+      width: 75% !important; }
   .login-form-wrapper:hover {
-    background-color: #00000015; }
+    background-color: #00000015;
+    box-shadow: 2px -2px 7px #00000040; }
   .login-form-wrapper:hover .login-btn > button {
     background: #fff;
     color: #ff4e31; }
@@ -815,44 +820,44 @@
     margin: 100px 0px; } }
 .sidebar-menu-wrapper {
   background: #002749;
-  padding: 100px  25px 60px; }
-
-.sidebar-menu-wrapper .sidebar-title h3 {
-  font-size: 30px;
-  color: #fff;
-  font-weight: 700;
-  position: relative; }
-  .sidebar-menu-wrapper .sidebar-title h3::after {
-    content: "\f105";
-    color: #ff4e31;
-    font-size: 30px;
-    font-weight: 300;
-    position: absolute;
-    left: 220px;
-    top: 2px;
-    font-family: "Font Awesome 5 Pro"; }
-.sidebar-menu-wrapper .custom-title-border-left {
-  border-color: #033b6d; }
-.sidebar-menu-wrapper .nav-item-list {
-  padding-left: 0px;
-  list-style: none;
-  margin-top: 45px;
-  margin-left: -25px;
-  margin-right: -25px; }
-  .sidebar-menu-wrapper .nav-item-list li {
+  padding: 100px  25px 60px;
+  height: 100%; }
+  .sidebar-menu-wrapper .sidebar-title h3 {
+    font-size: 25px;
+    font-weight: 600;
     color: #fff;
-    cursor: pointer;
-    line-height: 2.4;
-    font-size: 16px;
-    font-weight: 500;
-    padding-left: 25px;
-    padding-right: 25px; }
-    .sidebar-menu-wrapper .nav-item-list li i {
-      margin-right: 25px;
-      font-weight: 400; }
-    .sidebar-menu-wrapper .nav-item-list li:hover {
-      background: #033b6d;
-      color: #ff4e31; }
+    position: relative; }
+    .sidebar-menu-wrapper .sidebar-title h3::after {
+      content: "\f105";
+      color: #ff4e31;
+      font-size: 25px;
+      font-weight: 600;
+      position: absolute;
+      left: 220px;
+      top: 2px;
+      font-family: "Font Awesome 5 Pro"; }
+  .sidebar-menu-wrapper .custom-title-border-left {
+    border-color: #033b6d; }
+  .sidebar-menu-wrapper .nav-item-list {
+    padding-left: 0px;
+    list-style: none;
+    margin-top: 45px;
+    margin-left: -25px;
+    margin-right: -25px; }
+    .sidebar-menu-wrapper .nav-item-list li {
+      color: #fff;
+      cursor: pointer;
+      line-height: 2.4;
+      font-size: 16px;
+      font-weight: 600;
+      padding-left: 25px;
+      padding-right: 25px; }
+      .sidebar-menu-wrapper .nav-item-list li i {
+        margin-right: 25px;
+        font-weight: 400; }
+      .sidebar-menu-wrapper .nav-item-list li:hover {
+        background: #033b6d;
+        color: #ff4e31; }
 
 @media screen and (min-width: 767px) and (max-width: 1000px) {
   .sidebar-menu-wrapper .sidebar-title h3::after {
@@ -901,7 +906,8 @@
   .content-wrapper .book-list-wrapper .book-list .book-details td {
     border-right: none;
     padding-bottom: 0px;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 500;
     color: #000;
     line-height: 1.8; }
     .content-wrapper .book-list-wrapper .book-list .book-details td a {
@@ -909,7 +915,7 @@
   .content-wrapper .book-list-wrapper .book-list .book-details .title {
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
+    font-weight: 500;
     color: #ff4e31; }
     .content-wrapper .book-list-wrapper .book-list .book-details .title span {
       font-weight: normal; }
@@ -994,7 +1000,7 @@
 .page-inner-title {
   margin-bottom: 60px; }
   .page-inner-title h2 {
-    font-size: 32px;
+    font-size: 25px;
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
     color: #000; }
@@ -1084,11 +1090,12 @@
   .grid-list-wrapper .grid-content {
     margin-top: 35px; }
     .grid-list-wrapper .grid-content .grid-title h3 {
-      font-size: 24px;
-      color: #ff4e31;
-      font-weight: 600; }
+      font-size: 25px;
+      font-weight: 600;
+      color: #ff4e31; }
     .grid-list-wrapper .grid-content .grid-subtitle-title h4 {
       font-size: 16px;
+      font-weight: 500;
       color: #000; }
   .grid-list-wrapper .grid-social {
     margin-top: 15px; }
@@ -1117,11 +1124,12 @@
     .grid-list-wrapper .grid-social ul li .phone:after, .grid-list-wrapper .grid-social ul li .email:after, .grid-list-wrapper .grid-social ul li .facebook:after, .grid-list-wrapper .grid-social ul li .linkedin:after {
       position: absolute;
       top: 50px;
-      left: -45px;
+      left: 0;
       background: #ff4e31;
       padding: 5px 10px;
       border-radius: 5px;
-      opacity: 0; }
+      opacity: 0;
+      min-width: 60px; }
     .grid-list-wrapper .grid-social ul li a:hover {
       background-color: #ff4e31;
       z-index: 1; }
@@ -1141,8 +1149,8 @@
   .custom-table .download-corner-table thead tr th {
     border: none;
     color: #000;
-    font-size: 20px;
-    font-weight: 700; }
+    font-size: 16px;
+    font-weight: 600; }
 .custom-table .download-corner-table tbody tr {
   border-bottom: 2px solid #fff; }
   .custom-table .download-corner-table tbody tr:nth-of-type(odd) {
@@ -1152,7 +1160,8 @@
   .custom-table .download-corner-table tbody tr td {
     border-top: none;
     color: #000;
-    font-size: 16px; }
+    font-size: 14px;
+    font-weight: 500; }
 
 .explore-btn {
   background: #ff4e31 !important;
@@ -1216,10 +1225,12 @@
   .dress-code-tab-wrapper .tab-panel-wrapper .page-inner-title {
     margin-bottom: 30px; }
     .dress-code-tab-wrapper .tab-panel-wrapper .page-inner-title h2 {
-      font-size: 24px;
+      font-size: 25px;
+      font-weight: 600;
       color: #ff4e31; }
   .dress-code-tab-wrapper .tab-panel-wrapper .content p {
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 500;
     line-height: 1.8; }
 
 .infrastructure-content-wrapper {
@@ -1238,7 +1249,7 @@
       box-shadow: 2px 8px 21px 0px rgba(0, 0, 0, 0.5); }
   .infrastructure-content-image .attendance-body-header-inside {
     margin: 10; }
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 992px) {
     .infrastructure-content-image .attendance-body-header-inside {
       margin: 0; }
     .infrastructure-content-image img {
@@ -1249,9 +1260,9 @@
       content: "";
       position: absolute;
       left: -100px;
-      top: -61px;
+      top: -38px;
       z-index: -1;
-      height: 421px;
+      height: 375px;
       border-radius: 25px; } }
 
 .find-pay-slip-info-wrapper {
@@ -1606,7 +1617,9 @@
     margin-right: 30px;
     margin-bottom: 30px; }
     .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image img {
-      max-width: 230px; }
+      max-width: 180px;
+      max-height: 210px;
+      object-fit: cover; }
     .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image .grid-social ul li .phone:after {
       content: attr(phone); }
     .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image .grid-social ul li .email:after {
@@ -1629,8 +1642,8 @@
     text-align: center;
     border: none;
     color: #fff;
-    font-size: 20px;
-    font-weight: 700; }
+    font-size: 16px;
+    font-weight: 600; }
 .custom-table .section-wise-attendance-table tbody tr {
   border-bottom: 2px solid #fff; }
   .custom-table .section-wise-attendance-table tbody tr:hover td {
@@ -1639,7 +1652,8 @@
     transition: all .3s ease-in-out;
     border-top: none;
     color: #000;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 500;
     position: relative; }
     .custom-table .section-wise-attendance-table tbody tr td:nth-child(even) {
       text-align: center; }
@@ -1735,8 +1749,8 @@
     text-align: center;
     border: none;
     color: #fff;
-    font-size: 20px;
-    font-weight: 700; }
+    font-size: 16px;
+    font-weight: 600; }
 .custom-table .student-wise-attendance-table tbody tr {
   border-bottom: 2px solid #fff; }
   .custom-table .student-wise-attendance-table tbody tr:hover td {
@@ -1745,7 +1759,8 @@
     transition: all .3s ease-in-out;
     border-top: none;
     color: #000;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 500;
     position: relative; }
     .custom-table .student-wise-attendance-table tbody tr td:nth-child(even) {
       text-align: center; }
