--- a/app/assets/scss/pageBodyContainer_kabir.scss
+++ b/app/assets/scss/pageBodyContainer_kabir.scss
@@ -67,8 +67,8 @@
                         text-align: center;
                         border: none;
                         color: $colorWhite;
-                        font-size: 20px;
-                        font-weight: 700;
+                        font-size: $fontSizeSecondary;
+                        font-weight: $fontWeightPrimary;
                     } 
                 }
             }
@@ -84,7 +84,8 @@
                         transition: all .3s ease-in-out;
                         border-top: none;
                         color: $colorBlack;
-                        font-size: 16px;
+                        font-size: $fontSizeSecondarySmall;
+                        font-weight: $fontWeightSecondary;
                         position: relative;
 
                         &:nth-child(even){
@@ -859,7 +860,9 @@
                     margin-bottom: 30px;
 
                     img{
-                        max-width: 230px;
+                        max-width: 180px;
+                        max-height: 210px;
+                        object-fit: cover;
                     }
 
                     .grid-social{
