bug fixing from website tab of test case

--- a/app/assets/scss/sobhan.scss
+++ b/app/assets/scss/sobhan.scss
@@ -51,6 +51,11 @@
   }
 }
 
+.read-more-button {
+  width: 126px;
+  height: 50px;
+}
+
 // #scrollTopBtn:hover {
 //   background-color: #555;
 // }
