--- a/app/assets/scss/sobhan.scss
+++ b/app/assets/scss/sobhan.scss
@@ -21,7 +21,7 @@
 
 .notice-wrapper {
   // background-color: $colorWhite;
-  padding: 0px 15px;
+  // padding: 0px 15px;
   border: 1px solid $grayColor;
 
   p {
