--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -1205,6 +1205,38 @@
             }
         }
     }
+
+    .grid-social{
+        ul{
+            li{
+                .phone{
+                    &:after{
+                        content: attr(phone);
+                    }
+                }
+
+                .email{
+                    &:after{
+                        content: attr(email);
+                    }
+                }
+
+                .facebook{
+                    &:after{
+                        content: attr(facebook);
+                    }
+                }
+
+                .linkedin{
+                    &:after{
+                        content: attr(linkedin);
+                    }
+                }
+            }
+        }
+
+    }
+    
     &:hover{
         -webkit-box-shadow: 0px 4px 15px 3px rgba(189,189,189,0.5);
         -moz-box-shadow: 0px 4px 15px 3px rgba(189,189,189,0.5);
