--- a/app/assets/scss/sobhan.scss
+++ b/app/assets/scss/sobhan.scss
@@ -56,6 +56,19 @@
   height: 50px;
 }
 
+.dayPicker-custom-input {
+  background-color: #f2f2f2;
+  color: #818181;
+  border-radius: 0.25rem;
+  flex: 1 0 70%;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
 // #scrollTopBtn:hover {
 //   background-color: #555;
 // }
