--- a/app/assets/scss/slider-section.scss
+++ b/app/assets/scss/slider-section.scss
@@ -124,7 +124,7 @@
                         }
                     }
                     a{
-                        padding: 15px;
+                        padding: 10.5px 15px;
                         display: block;
                         span{
                             color: $grayColor;
