--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -252,7 +252,7 @@
         top: 0;
         z-index: 1; }
       .home-slider-wrapper .notice-board-wrapper .notice-board ul li a {
-        padding: 15px;
+        padding: 10.5px 15px;
         display: block; }
         .home-slider-wrapper .notice-board-wrapper .notice-board ul li a span {
           color: #b2bec8;
@@ -2405,5 +2405,48 @@
 .react-datepicker-wrapper .react-datepicker__input-container .dayPicker-custom-input:focus {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+
+.carousel.slide .carousel-inner .carousel-item {
+  height: auto; }
+  .carousel.slide .carousel-inner .carousel-item img {
+    object-fit: fill;
+    height: unset; }
+  .carousel.slide .carousel-inner .carousel-item .carousel-caption {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    bottom: 60px; }
+
+.image-section {
+  position: relative;
+  height: 350px; }
+  .image-section .image-section-inside {
+    position: absolute;
+    background-color: white;
+    padding: unset;
+    border: 2px solid tan;
+    border-radius: 15px;
+    overflow: hidden;
+    width: 300px;
+    height: 250px; }
+    .image-section .image-section-inside:nth-child(1) {
+      left: 5px;
+      top: 5px;
+      z-index: 10; }
+    .image-section .image-section-inside:nth-child(2) {
+      left: 10px;
+      top: 10px;
+      z-index: 9; }
+    .image-section .image-section-inside:nth-child(3) {
+      left: 15px;
+      top: 15px;
+      z-index: 8; }
+    .image-section .image-section-inside:nth-child(4) {
+      left: 20px;
+      top: 20px;
+      z-index: 7; }
+    .image-section .image-section-inside:nth-child(5) {
+      left: 25px;
+      top: 25px;
+      z-index: 6; }
 
 /*# sourceMappingURL=global.css.map */
