--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -2423,30 +2423,68 @@
     position: absolute;
     background-color: white;
     padding: unset;
-    border: 2px solid tan;
+    border: 2px solid #f1f1f1;
     border-radius: 15px;
     overflow: hidden;
-    width: 300px;
-    height: 250px; }
+    width: auto;
+    height: 250px;
+    transition: all 1s; }
+    .image-section .image-section-inside:hover {
+      position: relative;
+      left: 0px !important;
+      top: 0px !important;
+      transform: scale(1.2);
+      z-index: 20 !important; }
+      .image-section .image-section-inside:hover:hover::after {
+        background: rgba(0, 0, 0, 0.25); }
+    .image-section .image-section-inside:hover .book-image-zoom {
+      display: block; }
+    .image-section .image-section-inside .book-image-zoom {
+      height: 50px;
+      width: 50px;
+      background: #ff4e31;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      border-radius: 50%;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 1;
+      display: none; }
+    .image-section .image-section-inside::after {
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0, 0, 0, 0);
+      content: ""; }
+    .image-section .image-section-inside img {
+      height: 100%; }
     .image-section .image-section-inside:nth-child(1) {
-      left: 5px;
-      top: 5px;
+      left: 0px;
+      top: 0px;
       z-index: 10; }
     .image-section .image-section-inside:nth-child(2) {
       left: 10px;
       top: 10px;
       z-index: 9; }
     .image-section .image-section-inside:nth-child(3) {
-      left: 15px;
-      top: 15px;
-      z-index: 8; }
-    .image-section .image-section-inside:nth-child(4) {
       left: 20px;
       top: 20px;
+      z-index: 8; }
+    .image-section .image-section-inside:nth-child(4) {
+      left: 30px;
+      top: 30px;
       z-index: 7; }
     .image-section .image-section-inside:nth-child(5) {
-      left: 25px;
-      top: 25px;
+      left: 40px;
+      top: 40px;
       z-index: 6; }
 
 /*# sourceMappingURL=global.css.map */
