--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -98,7 +98,7 @@
 
 .image-section{
     position: relative;
-    height: 350px;
+    height: 200px;
 
     // &:hover .image-section-inside{
     //     position: relative;
@@ -114,8 +114,8 @@
         border: 2px solid #f1f1f1;
         border-radius: 15px;
         overflow: hidden;
-        width: auto;
-        height: 250px;
+        max-width: 230px;
+        height: 150px;
         transition: all 1s;
 
         &:hover{
