--- a/app/assets/scss/slider-section.scss
+++ b/app/assets/scss/slider-section.scss
@@ -35,6 +35,8 @@
             background: #d9dde1;
             padding: 15px 20px;
             position: relative;
+            min-height: 411px;
+
             ul{
                 padding-left: 0;
                 list-style: none;
