--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -2449,13 +2449,15 @@
     border: 2px solid #f1f1f1;
     border-radius: 15px;
     overflow: hidden;
-    max-width: 230px;
+    width: 230px;
     height: 150px;
     transition: all 1s; }
     .image-section .image-section-inside:hover {
       position: relative;
       left: 0px !important;
       top: 0px !important;
+      width: 260px;
+      height: 170px;
       transform: scale(1.2);
       z-index: 20 !important; }
       .image-section .image-section-inside:hover:hover::after {
@@ -2509,5 +2511,17 @@
       left: 40px;
       top: 40px;
       z-index: 6; }
+    .image-section .image-section-inside:nth-child(n+6) {
+      left: 40px;
+      top: 40px;
+      z-index: 5;
+      border: 1px solid red; }
+
+.loader-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  height: 300px; }
 
 /*# sourceMappingURL=global.css.map */
